# outline

./: Cargo.toml
resources/: striped.wgsl
src/: main.rs
