[package]
name = "outline"
version = "0.1.0"
edition = "2021"

[dependencies]
ggez = "0.9.3"
itertools = "0.11.0"
rand = "0.8.5"
crevice = "0.13"
rfd = "0.14.1"
ggegui = "0.4.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true # Remember to change this
opt-level = 3
lto = true #Change this to be per platform windows doesn't seem to like it


